Fix font-weight on mobile

--- a/styl/screen.styl
+++ b/styl/screen.styl
@@ -14,7 +14,9 @@ html
 	background-color white
 
 body
-	font 500 18px / 1.3 "Helvetica", sans-serif
+	font-size 18px
+	font-family "Helvetica", sans-serif
+	line-height 1.3
 	color textColor
 
 hr
